src/test/ui/associated-types/defaults-unsound-62211-2.stderr
error[E0277]: the trait bound `Self: std::marker::Copy` is not satisfied
  --> $DIR/defaults-unsound-62211-2.rs:23:18
   |
LL | trait UncheckedCopy: Sized {
   | -------------------------- required by `UncheckedCopy`
...
LL |     type Output: Copy
   |                  ^^^^ the trait `std::marker::Copy` is not implemented for `Self`

error[E0277]: cannot add-assign `&'static str` to `Self`
  --> $DIR/defaults-unsound-62211-2.rs:27:7
   |
LL | trait UncheckedCopy: Sized {
   | -------------------------- required by `UncheckedCopy`
...
LL |     + AddAssign<&'static str>
   |       ^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `Self += &'static str`
   |
   = help: the trait `std::ops::AddAssign<&'static str>` is not implemented for `Self`

error[E0277]: the trait bound `Self: std::ops::Deref` is not satisfied
  --> $DIR/defaults-unsound-62211-2.rs:25:7
   |
LL | trait UncheckedCopy: Sized {
   | -------------------------- required by `UncheckedCopy`
...
LL |     + Deref<Target = str>
   |       ^^^^^^^^^^^^^^^^^^^ the trait `std::ops::Deref` is not implemented for `Self`

error[E0277]: `Self` doesn't implement `std::fmt::Display`
  --> $DIR/defaults-unsound-62211-2.rs:30:7
   |
LL | trait UncheckedCopy: Sized {
   | -------------------------- required by `UncheckedCopy`
...
LL |     + Display = Self;
   |       ^^^^^^^ `Self` cannot be formatted with the default formatter
   |
   = help: the trait `std::fmt::Display` is not implemented for `Self`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0277]: `T` doesn't implement `std::fmt::Display`
  --> $DIR/defaults-unsound-62211-2.rs:43:9
   |
LL | impl<T> UncheckedCopy for T {}
   |      -  ^^^^^^^^^^^^^ `T` cannot be formatted with the default formatter
   |      |
   |      help: consider restricting this bound: `T: std::fmt::Display`
   |
   = help: the trait `std::fmt::Display` is not implemented for `T`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0277]: the trait bound `T: std::ops::Deref` is not satisfied
  --> $DIR/defaults-unsound-62211-2.rs:43:9
   |
LL | impl<T> UncheckedCopy for T {}
   |      -  ^^^^^^^^^^^^^ the trait `std::ops::Deref` is not implemented for `T`
   |      |
   |      help: consider restricting this bound: `T: std::ops::Deref`

error[E0277]: cannot add-assign `&'static str` to `T`
  --> $DIR/defaults-unsound-62211-2.rs:43:9
   |
LL | impl<T> UncheckedCopy for T {}
   |      -  ^^^^^^^^^^^^^ no implementation for `T += &'static str`
   |      |
   |      help: consider restricting this bound: `T: std::ops::AddAssign<&'static str>`
   |
   = help: the trait `std::ops::AddAssign<&'static str>` is not implemented for `T`

error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/defaults-unsound-62211-2.rs:43:9
   |
LL | impl<T> UncheckedCopy for T {}
   |      -  ^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |      |
   |      help: consider restricting this bound: `T: std::marker::Copy`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0277`.
